--- a/reports/fanteam_month.html
+++ b/reports/fanteam_month.html
@@ -63,8 +63,11 @@
 		<button class="collapsible"><h2>Reports</h2></button>
             <div class="content">
 			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Overall.html" style="text-decoration:none;">Overall</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-26.html" style="text-decoration:none;">Wildcard 2024-01-26</a></h3>
 			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-28.html" style="text-decoration:none;">Wildcard 2024-01-28</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-29.html" style="text-decoration:none;">Wildcard 2024-01-29</a></h3>
 			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-02.html" style="text-decoration:none;">Wildcard 2024-02-02</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-09.html" style="text-decoration:none;">Wildcard 2024-02-09</a></h3>
             </div>
 
         <script>
