--- a/money_format/nba.html
+++ b/money_format/nba.html
@@ -58,17 +58,14 @@
     </head>
 
 	<body align="center">
-        <title>Fantasy Sports Schedule (nhl). Money format</title>
-        <h1>Fantasy Sports Schedule (nhl). Money format</h1>
+        <title>Fantasy Sports Schedule (nba). Money format</title>
+        <h1>Fantasy Sports Schedule (nba). Money format</h1>
 		<button class="collapsible"><h2>Month reports</h2></button>
             <div class="content">
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/October.html" style="text-decoration:none;">October</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/November.html" style="text-decoration:none;">November</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/December.html" style="text-decoration:none;">December</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/January.html" style="text-decoration:none;">January</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/February.html" style="text-decoration:none;">February</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/March.html" style="text-decoration:none;">March</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Money Format/nhl/April.html" style="text-decoration:none;">April</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/money_format/nba/January.html" style="text-decoration:none;">January</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/money_format/nba/February.html" style="text-decoration:none;">February</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/money_format/nba/March.html" style="text-decoration:none;">March</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/money_format/nba/April.html" style="text-decoration:none;">April</a></h3>
             </div>
 
         <script>
