--- a/fanteam_month/index.html
+++ b/fanteam_month/index.html
@@ -62,17 +62,17 @@
         <h1>Fantasy Sports Schedule (nba). Fanteam month competition</h1>
 		<button class="collapsible"><h2>Reports</h2></button>
             <div class="content">
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Overall.html" style="text-decoration:none;">Overall</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-26 (after).html" style="text-decoration:none;">Wildcard 2024-01-26 (after)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-26 (before).html" style="text-decoration:none;">Wildcard 2024-01-26 (before)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-28 (after).html" style="text-decoration:none;">Wildcard 2024-01-28 (after)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-28 (before).html" style="text-decoration:none;">Wildcard 2024-01-28 (before)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-29 (after).html" style="text-decoration:none;">Wildcard 2024-01-29 (after)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-01-29 (before).html" style="text-decoration:none;">Wildcard 2024-01-29 (before)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-02 (after).html" style="text-decoration:none;">Wildcard 2024-02-02 (after)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-02 (before).html" style="text-decoration:none;">Wildcard 2024-02-02 (before)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-09 (after).html" style="text-decoration:none;">Wildcard 2024-02-09 (after)</a></h3>
-			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/reports/Fanteam Month//Wildcard 2024-02-09 (before).html" style="text-decoration:none;">Wildcard 2024-02-09 (before)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Overall.html" style="text-decoration:none;">Overall</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-26 (after).html" style="text-decoration:none;">Wildcard 2024-01-26 (after)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-26 (before).html" style="text-decoration:none;">Wildcard 2024-01-26 (before)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-28 (after).html" style="text-decoration:none;">Wildcard 2024-01-28 (after)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-28 (before).html" style="text-decoration:none;">Wildcard 2024-01-28 (before)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-29 (after).html" style="text-decoration:none;">Wildcard 2024-01-29 (after)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-01-29 (before).html" style="text-decoration:none;">Wildcard 2024-01-29 (before)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-02-02 (after).html" style="text-decoration:none;">Wildcard 2024-02-02 (after)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-02-02 (before).html" style="text-decoration:none;">Wildcard 2024-02-02 (before)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-02-09 (after).html" style="text-decoration:none;">Wildcard 2024-02-09 (after)</a></h3>
+			<h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-02-09 (before).html" style="text-decoration:none;">Wildcard 2024-02-09 (before)</a></h3>
             </div>
 
         <script>
