--- a/matchups/nba.html
+++ b/matchups/nba.html
@@ -110,6 +110,19 @@
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks (nba)/Matchup 23.html" style="text-decoration:none;">Matchup 23 (01/04/2024 - 08/04/2024)</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks (nba)/Matchup 24.html" style="text-decoration:none;">Matchup 24 (08/04/2024 - 15/04/2024)</a></h3>
             </div>
+			<button class="collapsible"><h2>Weeks sports.ru</h2></button>
+            <div class="content">
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Overall.html" style="text-decoration:none;">Overall</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 17.html" style="text-decoration:none;">Matchup 17 (12/02/2024 - 19/02/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 18.html" style="text-decoration:none;">Matchup 18 (19/02/2024 - 26/02/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 19.html" style="text-decoration:none;">Matchup 19 (26/02/2024 - 04/03/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 20.html" style="text-decoration:none;">Matchup 20 (04/03/2024 - 11/03/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 21.html" style="text-decoration:none;">Matchup 21 (11/03/2024 - 18/03/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 22.html" style="text-decoration:none;">Matchup 22 (18/03/2024 - 25/03/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 23.html" style="text-decoration:none;">Matchup 23 (25/03/2024 - 01/04/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 24.html" style="text-decoration:none;">Matchup 24 (01/04/2024 - 08/04/2024)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/matchups/Weeks sports.ru (nba)/Matchup 25.html" style="text-decoration:none;">Matchup 25 (08/04/2024 - 15/04/2024)</a></h3>
+            </div>
 
         <script>
             var coll = document.getElementsByClassName("collapsible");
