--- a/subseq/nhl.html
+++ b/subseq/nhl.html
@@ -58,8 +58,8 @@
     </head>
 
 	<body align="center">
-        <title>Fantasy Sports Schedule (nhl)</title>
-        <h1>Fantasy Sports Schedule (nhl)</h1>
+        <title>Fantasy Sports Schedule (nhl). Subsequences.</title>
+        <h1>Fantasy Sports Schedule (nhl). Subsequences.</h1>
 			<button class="collapsible"><h2>SyhAryan League</h2></button>
             <div class="content">
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/SyhAryan League (nhl)/Pairs.html" style="text-decoration:none;">Pairs</a></h3>
