--- a/subseq/nba.html
+++ b/subseq/nba.html
@@ -58,8 +58,8 @@
     </head>
 
 	<body align="center">
-        <title>Fantasy Sports Schedule (nba)</title>
-        <h1>Fantasy Sports Schedule (nba)</h1>
+        <title>Fantasy Sports Schedule (nba). Subsequences.</title>
+        <h1>Fantasy Sports Schedule (nba). Subsequences.</h1>
 			<button class="collapsible"><h2>Sports Brothers</h2></button>
             <div class="content">
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Sports Brothers (nba)/Pairs.html" style="text-decoration:none;">Pairs</a></h3>
