--- a/subseq/nhl.html
+++ b/subseq/nhl.html
@@ -68,6 +68,8 @@
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Grand Keepers Liga (nhl)/CAR_STL_OTT.html" style="text-decoration:none;">CAR/STL/OTT</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Grand Keepers Liga (nhl)/DAL_WSH_BUF_NYR.html" style="text-decoration:none;">DAL/WSH/BUF/NYR</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Grand Keepers Liga (nhl)/NSH_MIN_SEA.html" style="text-decoration:none;">NSH/MIN/SEA</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Grand Keepers Liga (nhl)/TBL.html" style="text-decoration:none;">TBL</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/Grand Keepers Liga (nhl)/WSH_NSH_MIN_SEA.html" style="text-decoration:none;">WSH/NSH/MIN/SEA</a></h3>
             </div>
 
         <script>
