--- a/subseq/nba.html
+++ b/subseq/nba.html
@@ -66,6 +66,7 @@
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_CLE.html" style="text-decoration:none;">DAL/LAC/CLE</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_MIA.html" style="text-decoration:none;">DAL/LAC/MIA</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN.html" style="text-decoration:none;">DEN</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN_MIL.html" style="text-decoration:none;">DEN/MIL</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/MIA.html" style="text-decoration:none;">MIA</a></h3>
             </div>
 
