--- a/subseq/nba.html
+++ b/subseq/nba.html
@@ -64,7 +64,9 @@
             <div class="content">
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC.html" style="text-decoration:none;">DAL/LAC</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_CLE.html" style="text-decoration:none;">DAL/LAC/CLE</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_CLE_WAS.html" style="text-decoration:none;">DAL/LAC/CLE/WAS</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_MIA.html" style="text-decoration:none;">DAL/LAC/MIA</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_WAS.html" style="text-decoration:none;">DAL/LAC/WAS</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN.html" style="text-decoration:none;">DEN</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN_MIL.html" style="text-decoration:none;">DEN/MIL</a></h3>
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/MIA.html" style="text-decoration:none;">MIA</a></h3>
