--- a/subseq/nba.html
+++ b/subseq/nba.html
@@ -60,21 +60,9 @@
 	<body align="center">
         <title>Fantasy Schedule (nba). Subsequences</title>
         <h1>Fantasy Schedule (nba). Subsequences </h1>
-			<button class="collapsible"><h2>12 AM</h2></button>
+			<button class="collapsible"><h2>AANBA</h2></button>
             <div class="content">
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC.html" style="text-decoration:none;">DAL/LAC</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_CLE.html" style="text-decoration:none;">DAL/LAC/CLE</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_CLE_WAS.html" style="text-decoration:none;">DAL/LAC/CLE/WAS</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_MIA.html" style="text-decoration:none;">DAL/LAC/MIA</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_MIA_WAS.html" style="text-decoration:none;">DAL/LAC/MIA/WAS</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DAL_LAC_WAS.html" style="text-decoration:none;">DAL/LAC/WAS</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN.html" style="text-decoration:none;">DEN</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN_LAC_DAL_MIA_CLE_BKN_MIL_MIL_WAS.html" style="text-decoration:none;">DEN/LAC/DAL/MIA/CLE/BKN/MIL/MIL/WAS</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN_MIL.html" style="text-decoration:none;">DEN/MIL</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/DEN_MIL_BKN.html" style="text-decoration:none;">DEN/MIL/BKN</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/MIA.html" style="text-decoration:none;">MIA</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/MIA_MIL.html" style="text-decoration:none;">MIA/MIL</a></h3>
-            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/12 AM (nba)/WAS_MIA_MIL_DET.html" style="text-decoration:none;">WAS/MIA/MIL/DET</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/subseq/AANBA (nba)/DAL.html" style="text-decoration:none;">DAL</a></h3>
             </div>
 
         <script>
