Run and commit executed for fanteam_month

--- a/fanteam_month/index.html
+++ b/fanteam_month/index.html
@@ -63,6 +63,12 @@
 			<button class="collapsible"><h2>Reports</h2></button>
             <div class="content">
             <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Overall.html" style="text-decoration:none;">Overall</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-12-22 (after).html" style="text-decoration:none;">Wildcard 2024-12-22 (after)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2024-12-22 (before).html" style="text-decoration:none;">Wildcard 2024-12-22 (before)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2025-01-07 (after).html" style="text-decoration:none;">Wildcard 2025-01-07 (after)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2025-01-07 (before).html" style="text-decoration:none;">Wildcard 2025-01-07 (before)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2025-01-14 (after).html" style="text-decoration:none;">Wildcard 2025-01-14 (after)</a></h3>
+            <h3 style="margin:0"><a href="https://andrei1809.github.io/308068346049/fanteam_month/Wildcard 2025-01-14 (before).html" style="text-decoration:none;">Wildcard 2025-01-14 (before)</a></h3>
             </div>
 
         <script>
